# ts-client/zigbeealliance.distributedcomplianceledger.compliance/api.swagger.yml
@@ -207,9 +207,9 @@ paths:
                       type: string
                     certificationRoute:
                       type: string
-                    productType:
+                    programType:
                       type: string
-                    certificationTypeVersion:
+                    programTypeVersion:
                       type: string
                     compliantPlatformUsed:
                       type: string
@@ -221,9 +221,11 @@ paths:
                       type: string
                     supportedClusters:
                       type: string
-                    OSNameAndVersion:
+                    OSVersion:
                       type: string
                     parentChild:
+                      type: string
+                    certificationIdOfSoftwareComponent:
                       type: string
                     schemaVersion:
                       type: integer
@@ -337,9 +339,9 @@ paths:
                     type: string
                   certificationRoute:
                     type: string
-                  productType:
+                  programType:
                     type: string
-                  certificationTypeVersion:
+                  programTypeVersion:
                     type: string
                   compliantPlatformUsed:
                     type: string
@@ -351,9 +353,11 @@ paths:
                     type: string
                   supportedClusters:
                     type: string
-                  OSNameAndVersion:
+                  OSVersion:
                     type: string
                   parentChild:
+                    type: string
+                  certificationIdOfSoftwareComponent:
                     type: string
                   schemaVersion:
                     type: integer
@@ -463,9 +467,9 @@ paths:
                             type: string
                           certificationRoute:
                             type: string
-                          productType:
+                          programType:
                             type: string
-                          certificationTypeVersion:
+                          programTypeVersion:
                             type: string
                           compliantPlatformUsed:
                             type: string
@@ -477,9 +481,11 @@ paths:
                             type: string
                           supportedClusters:
                             type: string
-                          OSNameAndVersion:
+                          OSVersion:
                             type: string
                           parentChild:
+                            type: string
+                          certificationIdOfSoftwareComponent:
                             type: string
                           schemaVersion:
                             type: integer
@@ -600,9 +606,9 @@ paths:
                           type: string
                         certificationRoute:
                           type: string
-                        productType:
+                        programType:
                           type: string
-                        certificationTypeVersion:
+                        programTypeVersion:
                           type: string
                         compliantPlatformUsed:
                           type: string
@@ -614,9 +620,11 @@ paths:
                           type: string
                         supportedClusters:
                           type: string
-                        OSNameAndVersion:
+                        OSVersion:
                           type: string
                         parentChild:
+                          type: string
+                        certificationIdOfSoftwareComponent:
                           type: string
                         schemaVersion:
                           type: integer
@@ -1079,9 +1087,9 @@ definitions:
               type: string
             certificationRoute:
               type: string
-            productType:
+            programType:
               type: string
-            certificationTypeVersion:
+            programTypeVersion:
               type: string
             compliantPlatformUsed:
               type: string
@@ -1093,9 +1101,11 @@ definitions:
               type: string
             supportedClusters:
               type: string
-            OSNameAndVersion:
+            OSVersion:
               type: string
             parentChild:
+              type: string
+            certificationIdOfSoftwareComponent:
               type: string
             schemaVersion:
               type: integer
@@ -1168,9 +1178,9 @@ definitions:
                     type: string
                   certificationRoute:
                     type: string
-                  productType:
+                  programType:
                     type: string
-                  certificationTypeVersion:
+                  programTypeVersion:
                     type: string
                   compliantPlatformUsed:
                     type: string
@@ -1182,9 +1192,11 @@ definitions:
                     type: string
                   supportedClusters:
                     type: string
-                  OSNameAndVersion:
+                  OSVersion:
                     type: string
                   parentChild:
+                    type: string
+                  certificationIdOfSoftwareComponent:
                     type: string
                   schemaVersion:
                     type: integer
@@ -1327,9 +1339,9 @@ definitions:
             type: string
           certificationRoute:
             type: string
-          productType:
+          programType:
             type: string
-          certificationTypeVersion:
+          programTypeVersion:
             type: string
           compliantPlatformUsed:
             type: string
@@ -1341,9 +1353,11 @@ definitions:
             type: string
           supportedClusters:
             type: string
-          OSNameAndVersion:
+          OSVersion:
             type: string
           parentChild:
+            type: string
+          certificationIdOfSoftwareComponent:
             type: string
           schemaVersion:
             type: integer
@@ -1405,9 +1419,9 @@ definitions:
                   type: string
                 certificationRoute:
                   type: string
-                productType:
+                programType:
                   type: string
-                certificationTypeVersion:
+                programTypeVersion:
                   type: string
                 compliantPlatformUsed:
                   type: string
@@ -1419,9 +1433,11 @@ definitions:
                   type: string
                 supportedClusters:
                   type: string
-                OSNameAndVersion:
+                OSVersion:
                   type: string
                 parentChild:
+                  type: string
+                certificationIdOfSoftwareComponent:
                   type: string
                 schemaVersion:
                   type: integer
@@ -1527,9 +1543,9 @@ definitions:
         type: string
       certificationRoute:
         type: string
-      productType:
+      programType:
         type: string
-      certificationTypeVersion:
+      programTypeVersion:
         type: string
       compliantPlatformUsed:
         type: string
@@ -1541,9 +1557,11 @@ definitions:
         type: string
       supportedClusters:
         type: string
-      OSNameAndVersion:
+      OSVersion:
         type: string
       parentChild:
+        type: string
+      certificationIdOfSoftwareComponent:
         type: string
       schemaVersion:
         type: integer
@@ -1602,9 +1620,9 @@ definitions:
               type: string
             certificationRoute:
               type: string
-            productType:
+            programType:
               type: string
-            certificationTypeVersion:
+            programTypeVersion:
               type: string
             compliantPlatformUsed:
               type: string
@@ -1616,9 +1634,11 @@ definitions:
               type: string
             supportedClusters:
               type: string
-            OSNameAndVersion:
+            OSVersion:
               type: string
             parentChild:
+              type: string
+            certificationIdOfSoftwareComponent:
               type: string
             schemaVersion:
               type: integer
