# x/compliance/keeper/msg_server_provision_model.go
@@ -60,25 +60,27 @@ func (k msgServer) ProvisionModel(goCtx context.Context, msg *types.MsgProvision
 		Vid:                                msg.Vid,
 		Pid:                                msg.Pid,
 		SoftwareVersion:                    msg.SoftwareVersion,
-		SoftwareVersionString:              msg.SoftwareVersionString,
 		CertificationType:                  msg.CertificationType,
+		SoftwareVersionString:              msg.SoftwareVersionString,
 		Date:                               msg.ProvisionalDate,
 		Reason:                             msg.Reason,
 		Owner:                              msg.Signer,
 		SoftwareVersionCertificationStatus: types.CodeProvisional,
 		History:                            []*types.ComplianceHistoryItem{},
 		CDVersionNumber:                    msg.CDVersionNumber,
-		CertificationTypeVersion:           msg.CertificationTypeVersion,
+		ProgramTypeVersion:                 msg.ProgramTypeVersion,
 		CDCertificateId:                    msg.CDCertificateId,
 		FamilyId:                           msg.FamilyId,
 		SupportedClusters:                  msg.SupportedClusters,
 		CompliantPlatformUsed:              msg.CompliantPlatformUsed,
 		CompliantPlatformVersion:           msg.CompliantPlatformVersion,
-		OSNameAndVersion:                   msg.OSNameAndVersion,
+		OSVersion:                          msg.OSVersion,
 		CertificationRoute:                 msg.CertificationRoute,
-		ProductType:                        msg.ProductType,
+		ProgramType:                        msg.ProgramType,
 		Transport:                          msg.Transport,
 		ParentChild:                        msg.ParentChild,
+		CertificationIdOfSoftwareComponent: msg.CertificationIdOfSoftwareComponent,
+		SpecificationVersion:               msg.SpecificationVersion,
 		SchemaVersion:                      msg.SchemaVersion,
 	}
 
