# x/compliance/types/message_provision_model.go
@@ -15,32 +15,35 @@ var _ sdk.Msg = &MsgProvisionModel{}
 
 func NewMsgProvisionModel(
 	signer string, vid int32, pid int32, softwareVersion uint32, softwareVersionString string, cDVersionNumber uint32,
-	provisionalDate string, certificationType string, reason string, certificationTypeVersion string, cDCertificateID string,
-	familyID string, supportedClusters string, compliantPlatformUsed string, compliantPlatformVersion string, oSNameAndVersion string,
-	certificationRoute string, productType string, transport string, parentChild string, schemaVersion uint32,
+	provisionalDate string, certificationType string, reason string, programTypeVersion string, cDCertificateID string,
+	familyID string, supportedClusters string, compliantPlatformUsed string, compliantPlatformVersion string, osVersion string,
+	certificationRoute string, programType string, transport string, parentChild string, certificationIDOfSoftwareComponent string,
+	specificationVersion string, schemaVersion uint32,
 ) *MsgProvisionModel {
 	return &MsgProvisionModel{
-		Signer:                   signer,
-		Vid:                      vid,
-		Pid:                      pid,
-		SoftwareVersion:          softwareVersion,
-		SoftwareVersionString:    softwareVersionString,
-		CDVersionNumber:          cDVersionNumber,
-		ProvisionalDate:          provisionalDate,
-		CertificationType:        certificationType,
-		Reason:                   reason,
-		CertificationTypeVersion: certificationTypeVersion,
-		CDCertificateId:          cDCertificateID,
-		FamilyId:                 familyID,
-		SupportedClusters:        supportedClusters,
-		CompliantPlatformUsed:    compliantPlatformUsed,
-		CompliantPlatformVersion: compliantPlatformVersion,
-		OSNameAndVersion:         oSNameAndVersion,
-		CertificationRoute:       certificationRoute,
-		ProductType:              productType,
-		Transport:                transport,
-		ParentChild:              parentChild,
-		SchemaVersion:            schemaVersion,
+		Signer:                             signer,
+		Vid:                                vid,
+		Pid:                                pid,
+		SoftwareVersion:                    softwareVersion,
+		SoftwareVersionString:              softwareVersionString,
+		CDVersionNumber:                    cDVersionNumber,
+		ProvisionalDate:                    provisionalDate,
+		CertificationType:                  certificationType,
+		Reason:                             reason,
+		ProgramTypeVersion:                 programTypeVersion,
+		CDCertificateId:                    cDCertificateID,
+		FamilyId:                           familyID,
+		SupportedClusters:                  supportedClusters,
+		CompliantPlatformUsed:              compliantPlatformUsed,
+		CompliantPlatformVersion:           compliantPlatformVersion,
+		OSVersion:                          osVersion,
+		CertificationRoute:                 certificationRoute,
+		ProgramType:                        programType,
+		Transport:                          transport,
+		ParentChild:                        parentChild,
+		CertificationIdOfSoftwareComponent: certificationIDOfSoftwareComponent,
+		SpecificationVersion:               specificationVersion,
+		SchemaVersion:                      schemaVersion,
 	}
 }
 
